--- a/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
+++ b/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
@@ -53,7 +53,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARM64</MtouchArch>
-    <CodesignKey>iPhone Developer: Sergiy Velychko (HXXMHACCGA)</CodesignKey>
+    <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>
     </CodesignEntitlements>
