--- a/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
+++ b/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
@@ -323,6 +323,7 @@
     <Content Include="Certificates\sergiyExpensesWriter_iosPushNot_Sandbox.cer" />
     <Content Include="Certificates\sergiyExpensesWriter_sandboxCertificate.p12" />
     <None Include="Properties\PublishProfiles\ExpensesWriter - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\ExpensesWriterWebApi - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -348,6 +349,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="webConnectionStrings.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -400,7 +402,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50313</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://192.168.88.171:44376/</IISUrl>
+          <IISUrl>http://localhost:44376/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
