--- a/ExpensesWriter.WebApi/Web.config
+++ b/ExpensesWriter.WebApi/Web.config
@@ -8,17 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <!--<add name="ExpensesWriter" connectionString="data source=svelychko.database.windows.net;initial catalog=ExpensesWriter;user id=svelychko;password=$@USATrip2307;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <!--<add name="ExpensesWriterDB" connectionString="Data Source=DESKTOP-MFJNBND\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ExpensesWriterDB3.mdf;Initial Catalog=ExpensesWriterDB3;Integrated Security=true"
-      providerName="System.Data.SqlClient" />-->
-    <!--<add name="ExpensesWriterDB" connectionString="Data Source=DESKTOP-MFJNBND\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ExpensesWriter2019.mdf;Initial Catalog=ExpensesWriter2019;Integrated Security=True"
-  providerName="System.Data.SqlClient" />-->
-    <add name="ExpensesWriterDB" connectionString="Data Source=DESKTOP-MFJNBND\SQLEXPRESS;Initial Catalog=ExpensesWriter2019;Integrated Security=True"
-  providerName="System.Data.SqlClient" />
-
-  </connectionStrings>
-  <appSettings></appSettings>
+  <connectionStrings configSource="webConnectionStrings.config" />
+  <appSettings>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
