--- a/ExpensesWriter/ExpensesWriter.iOS/Info.plist
+++ b/ExpensesWriter/ExpensesWriter.iOS/Info.plist
@@ -39,5 +39,7 @@
 	<string>1</string>
 	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreen</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
