Expenses for current months page added

--- a/ExpensesWriter/ExpensesWriter/ExpensesWriter.csproj
+++ b/ExpensesWriter/ExpensesWriter/ExpensesWriter.csproj
@@ -35,6 +35,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\CurrentMonthExpensesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
