--- a/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
+++ b/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
@@ -267,7 +267,10 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\DeviceController.cs" />
+    <Compile Include="Models\CategoriesContext.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\DeviceData.cs" />
     <Compile Include="Controllers\ExpensesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
