--- a/ExpensesWriter/ExpensesWriter/ExpensesWriter.csproj
+++ b/ExpensesWriter/ExpensesWriter/ExpensesWriter.csproj
@@ -77,5 +77,8 @@
     <EmbeddedResource Update="Views\RegisterPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ContentViews\ExpensesView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
