--- a/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
+++ b/ExpensesWriter.WebApi/ExpensesWriter.WebApi.csproj
@@ -278,10 +278,12 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BudgetPlanningController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\DeviceController.cs" />
+    <Compile Include="Controllers\FamilyMembersController.cs" />
     <Compile Include="Migrations\202001091038476_InitialCreate.cs" />
     <Compile Include="Migrations\202001091038476_InitialCreate.designer.cs">
       <DependentUpon>202001091038476_InitialCreate.cs</DependentUpon>
@@ -302,6 +304,10 @@
     <Compile Include="Migrations\202005071755489_BudgetPlannin.designer.cs">
       <DependentUpon>202005071755489_BudgetPlannin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008071029137_Expense_IsDeleted_FieldAdded.cs" />
+    <Compile Include="Migrations\202008071029137_Expense_IsDeleted_FieldAdded.designer.cs">
+      <DependentUpon>202008071029137_Expense_IsDeleted_FieldAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BudgetItem.cs" />
     <Compile Include="Models\BudgetPlanningItem.cs" />
@@ -318,6 +324,7 @@
     <Compile Include="Models\DevicesContext.cs" />
     <Compile Include="Models\Expense.cs" />
     <Compile Include="Models\ExpensesContext.cs" />
+    <Compile Include="Models\FamilyMember.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -521,6 +528,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005071755489_BudgetPlannin.resx">
       <DependentUpon>202005071755489_BudgetPlannin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008071029137_Expense_IsDeleted_FieldAdded.resx">
+      <DependentUpon>202008071029137_Expense_IsDeleted_FieldAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
