--- a/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
+++ b/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
@@ -14,7 +14,7 @@
     <AssemblyName>ExpensesWriter.iOS</AssemblyName>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
-    <ProvisioningType>automatic</ProvisioningType>
+    <ProvisioningType>manual</ProvisioningType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -72,8 +72,7 @@
     <MtouchArch>ARM64</MtouchArch>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Distribution: Sergiy Velychko (HDS7JN7LL4)</CodesignKey>
-    <CodesignEntitlements>
-    </CodesignEntitlements>
+    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignExtraArgs />
     <CodesignResourceRules />
     <CodesignProvision>ExpensesWriterDistrib20210418</CodesignProvision>
@@ -182,6 +181,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Push">
       <Version>3.4.3</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Client">
+      <Version>4.35.1</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Settings">
       <Version>3.1.1</Version>
