--- a/ExpensesWriter/ExpensesWriter.Android/ExpensesWriter.Android.csproj
+++ b/ExpensesWriter/ExpensesWriter.Android/ExpensesWriter.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Microsoft.AppCenter.Push">
       <Version>3.4.3</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Client">
+      <Version>4.35.1</Version>
+    </PackageReference>
     <PackageReference Include="WindowsAzure.MobileServices">
       <Version>1.3.2</Version>
     </PackageReference>
