--- a/ExpensesWriter/ExpensesWriter.iOS/Info.plist
+++ b/ExpensesWriter/ExpensesWriter.iOS/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.sergiy.expensesWriter</string>
 	<key>CFBundleVersion</key>
-	<string>1.04</string>
+	<string>1.07</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -41,5 +41,18 @@
 	<string>LaunchScreen</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.sergiy.expensesWriter</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>msauth.com.sergiy.expensesWriter://auth</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
