--- a/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
+++ b/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
@@ -72,7 +72,8 @@
     <MtouchArch>ARM64</MtouchArch>
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Distribution: Sergiy Velychko (HDS7JN7LL4)</CodesignKey>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
+    <CodesignEntitlements>
+    </CodesignEntitlements>
     <CodesignExtraArgs />
     <CodesignResourceRules />
     <CodesignProvision>ExpensesWriterDistrib20210418</CodesignProvision>
