--- a/ExpensesWriter/ExpensesWriter.Android/ExpensesWriter.Android.csproj
+++ b/ExpensesWriter/ExpensesWriter.Android/ExpensesWriter.Android.csproj
@@ -97,6 +97,7 @@
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.3.0.1" />
     <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.7" />
     <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.2.2.1" />
+	<PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.5" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="-AzureNotificationHubService.cs" />
