--- a/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
+++ b/ExpensesWriter/ExpensesWriter.iOS/ExpensesWriter.iOS.csproj
@@ -43,6 +43,8 @@
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
     <ConsolePause>false</ConsolePause>
+    <CodesignKey>Apple Distribution: Sergiy Velychko (HDS7JN7LL4)</CodesignKey>
+    <CodesignProvision>EW_Development_2024</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugSymbols>true</DebugSymbols>
@@ -76,7 +78,7 @@
     </CodesignEntitlements>
     <CodesignExtraArgs />
     <CodesignResourceRules />
-    <CodesignProvision>EW_Distribution2023_06</CodesignProvision>
+    <CodesignProvision>ExpWriter2024</CodesignProvision>
     <BuildIpa>true</BuildIpa>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchSdkVersion>14.4</MtouchSdkVersion>
@@ -102,61 +104,61 @@
     <BundleResource Include="Resources\xamarin_logo.png" />
     <BundleResource Include="Resources\xamarin_logo%402x.png" />
     <BundleResource Include="Resources\xamarin_logo%403x.png" />
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_120x120.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_1024x1024.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_120x1201.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_120x120.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_152x152.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_120x1201.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_167x1671.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_152x152.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_180x180.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_167x167.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_20x20.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_180x180.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_29x29.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_20x20.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_40x40.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_29x29.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_40x401.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_40x40.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_40x402.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_40x401.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_58x58.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_40x402.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_58x581.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_58x58.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_60x60.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_58x581.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_76x76.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_60x60.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_80x80.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_76x76.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_80x801.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_80x80.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\EW_87x87.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_80x801.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\expenses1.png">
+    <ImageAsset Include="Assets.xcassets\AppIcons.appiconset\EW_87x87.png">
       <Visible>false</Visible>
     </ImageAsset>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
