--- a/ExpensesWriter/ExpensesWriter.iOS/Info.plist
+++ b/ExpensesWriter/ExpensesWriter.iOS/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.sergiy.expensesWriter</string>
 	<key>CFBundleVersion</key>
-	<string>1.16</string>
+	<string>1.21</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
@@ -40,6 +40,21 @@
 	<key>UIMainStoryboardFile</key>
 	<string>LaunchScreen</string>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcons</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+    <dict>
+        <key>CFBundleIconFiles</key>
+        <array>
+            <string>AppIcons</string> <!-- This should match the name of your image set -->
+        </array>
+        <key>UIPrerenderedIcon</key>
+        <false/>
+    </dict>
+</dict>
+	
 </dict>
 </plist>
